--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="{{ url_for('home_page') }}">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('home_page') }}">Register</a>
+                <a class="nav-link" href="{{ url_for('register_page') }}">Register</a>
             </li>
         </ul>
     </div>
